# FantasticLanguage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  program.diagram
include/: Lexer.h  Parser.h  Token.h
include/ast/: AstExpression.h  AstNode.h  AstStatement.h
include/lib/: Storage.h  Value.h
include/utils/: common_utils.h
src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  common_utils.cpp  common_utils.h
src/ast/: AssignmentStatement.cpp  AssignmentStatement.h  AstExpression.cpp  AstNode.cpp  AstStatement.cpp  BinaryExpression.cpp  BinaryExpression.h  BlockStatement.cpp  BlockStatement.h  BreakStatement.cpp  BreakStatement.h  ConditionalExpression.cpp  ConditionalExpression.h  ConstantExpression.cpp  ConstantExpression.h  ContinueStatement.cpp  ContinueStatement.h  DoWhileStatement.cpp  DoWhileStatement.h  Expression.cpp  Expression.h  ForStatement.cpp  ForStatement.h  IfStatement.cpp  IfStatement.h  NumberExpression.cpp  NumberExpression.h  PrintStatement.cpp  PrintStatement.h  Statement.cpp  Statement.h  UnaryExpression.cpp  UnaryExpression.h  ValueExpression.cpp  ValueExpression.h  VariableExpression.cpp  VariableExpression.h  WhileStatement.cpp  WhileStatement.h
src/lib/: NumberValue.cpp  NumberValue.h  Storage.cpp  StringValue.cpp  StringValue.h  Value.cpp  Value.h  Variables.cpp  Variables.h
src/utils/: common_utils.cpp
